[package]
name = "todr"
version = "0.1.0"
description = "Todoist Commandline Client" 
keywords = ["todo", "list", "todoist", "cli"]
categories = ["command-line-utilities"]
authors = ["Brian Gianforcaro <b.gianfo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bgianfo/todr"
license = "MIT"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bgianfo/todr", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"
term = "0.6"
dirs = "2"
# Temporarily use master version of rustyline to take advantage
# of this commit: https://github.com/kkawakam/rustyline/commit/7a052a9ae42d00a553813c98c8db0e8d4c3a81ea
# Once the new package is released, we can switch back.
rustyline = { git = "https://github.com/kkawakam/rustyline" }
