[package]
name = "todr"
version = "0.1.0"
description = "Todoist Commandline Client"
keywords = ["todo", "list", "todoist", "cli"]
categories = ["command-line-utilities"]
authors = ["Brian Gianforcaro <b.gianfo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bgianfo/todr"
license = "MIT"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bgianfo/todr", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term = "0.7"
dirs = "3"
rustyline = "8"

[dependencies.reqwest]
version = "0.11"
features = ["default", "blocking", "json"]
